Improve style of the page and fix radio buttons
- Add more css to the page
- Move radio buttons before the text

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </fieldset>
             <fieldset>
                 <legend>Who want the vehicle?</legend>
-                <label for="me">Me <input type="radio" name="vehicle-owner" id="me" checked></label>
-                <label for="family-member">Family member <input type="radio" name="vehicle-owner" id="family-member"></label>
-                <label for="someone-else">Someone else <input type="radio" name="vehicle-owner" id="someone-else"></label>
+                <label for="me"><input type="radio" name="vehicle-owner" id="me" checked> Me</label>
+                <label for="family-member"><input type="radio" name="vehicle-owner" id="family-member"> Family member</label>
+                <label for="someone-else"><input type="radio" name="vehicle-owner" id="someone-else"> Someone else</label>
             </fieldset>
             <fieldset>
                 <label for="dropdown">What do you prefer more: <select name="drop-menu" id="dropdown">
