--- a/index.html
+++ b/index.html
@@ -19,23 +19,25 @@
                 <label for="age" id="number-label">Age: <input type="number" name="age" id="age" min="14" max="120" placeholder="between 14-120" required></label>
             </fieldset>
             <fieldset>
-                <legend>Who want the vehicle?</legend>
+                <legend><code>></code> Who want the vehicle?</legend>
                 <label for="me"><input type="radio" name="vehicle-owner" id="me" checked> Me</label>
                 <label for="family-member"><input type="radio" name="vehicle-owner" id="family-member"> Family member</label>
                 <label for="someone-else"><input type="radio" name="vehicle-owner" id="someone-else"> Someone else</label>
             </fieldset>
             <fieldset>
-                <label for="dropdown">What do you prefer more: <select name="drop-menu" id="dropdown">
+                <label for="dropdown"><code>></code> What do you prefer more: <select name="drop-menu" id="dropdown">
                     <option value="pholder">choose one</option>
                     <option value="car">Car</option>
                     <option value="bike">Bike</option>
                 </select></label>
-                <p class="checker">Choose that describe you.</p>
+            </fieldset>
+            <fieldset>
+                <p class="checker"><code>></code> Choose that describe you.</p>
                 <label for="professional">Professional <input type="checkbox" name="pro" id="professional"></label>
                 <label for="casual">Casual <input type="checkbox" value="casual" id="casual"></label>
                 <label for="die-hard">Die-hard <input type="checkbox" value="hardc" id="die-hard"></label>
                 <label for="classy">Classy <input type="checkbox" value="classy" id="classy"></label>
-                <label for="more">Tell us more <textarea name="more" id="more"></textarea></label>
+                <label for="more"><code>></code> Tell us more <textarea name="more" id="more" rows="6" cols="35"></textarea></label>
             </fieldset>
             <input type="submit" value="Submit" id="submit">
         </form>
